--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="social-media">
                 <a href="https://twitter.com/nwkmann"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://github.com/franci-e"><i class="fa-brands fa-github"></i></a>
-                <a href="mailto:f.r.a.n.c.i.e@outlook.com"><i class="fa-regular fa-envelope"></i></a>
+                <a href="mailto:i@francie.cc"><i class="fa-regular fa-envelope"></i></a>
             </div>
             
         </div>
